<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clNewsRowContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/ivNewsIcon"
        android:layout_width="100dp"
        android:layout_height="82dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="@+id/clNewsRowContainer"
        app:layout_constraintTop_toTopOf="@+id/clNewsRowContainer" />

    <TextView
        android:id="@+id/tvNewsHeading"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="32dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/ivNewsIcon"
        app:layout_constraintRight_toRightOf="@+id/clNewsRowContainer"
        tools:layout_editor_absoluteY="25dp" />

</android.support.constraint.ConstraintLayout>