<resources>
    <string name="app_name">MVPNewsApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
</resources>
